--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,13 @@ pasta_curves = "0.5.0"
 rand = "0.8"
 rand_core = { version = "0.6", default-features = false }
 
-halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }
+#halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }
+#halo2curves = { path = "../halo2curves" }
+halo2curves = { git = "https://github.com/leonardoalt/halo2curves", branch = "nova" }
+serde = { version = "1.0.152", features = ["alloc", "derive"] }
+hex = { version = "0.4.3", features = ["alloc", "serde"] }
+blake2b_simd = { version = "1" }
+static_assertions = "1.1.0"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
