--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
 rand = "0.8"
 rand_core = { version = "0.6", default-features = false }
 
-#halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }
-halo2curves = { path = "../halo2curves" }
+halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves" }
+#halo2curves = { path = "../halo2curves" }
 #halo2curves = { git = "https://github.com/leonardoalt/halo2curves", branch = "nova" }
 serde = { version = "1.0.152", features = ["alloc", "derive"] }
 hex = { version = "0.4.3", features = ["alloc", "serde"] }
